<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Кинопоиск</string>
    
    <!-- MovieDetailActivity -->
    <string name="random_movie">Случайный фильм</string>
    <string name="more_info">Подробнее</string>
    <string name="actor_card">Карточка актёра</string>
    
    <!-- ProfileActivity -->
    <string name="profile">Профиль</string>
    <string name="name_hint">Введите ваше имя</string>
    <string name="age_hint">Введите возраст</string>
    <string name="about_hint">Расскажите о себе</string>
    <string name="save">Сохранить</string>
    <string name="cancel">Отмена</string>
    <string name="name_error">Имя должно быть от 2 до 40 символов</string>
    <string name="age_error">Возраст должен быть от 10 до 120 лет</string>
    <string name="genre_error">Выберите любимый жанр</string>
    <string name="profile_saved">Профиль сохранён</string>
    <string name="version_format">Версия приложения: %s</string>
    <string name="greeting_format">Привет, %s!</string>
    <string name="favorite_genre">Любимый жанр</string>
    <string name="no_app_for_link">Нет приложения для открытия ссылки</string>

    <!-- Actor screen -->
    <string name="actor_poster_cd">Фото актёра</string>
    <string name="actor_subtitle_format">%1$d • %2$s</string>
    <string name="known_for">Известен по</string>
    <string name="bio">Биография</string>
    <string name="open_in_wiki">Открыть в Википедии</string>
    
    <!-- Genres -->
    <string-array name="genres">
        <item>Выберите жанр</item>
        <item>Драма</item>
        <item>Комедия</item>
        <item>Боевик</item>
        <item>Фантастика</item>
        <item>Ужасы</item>
    </string-array>
</resources>
